# fann

./: CMakeLists.txt
examples/: CMakeLists.txt  cascade_train.c.in  momentums.c.in  mushroom.c.in  robot.c.in  scaling_test.c.in  scaling_train.c.in  steepness_train.c.in  xor_test.c.in  xor_train.c.in
